# VisualizadorDICOM

./: .gitignore  CMakeLists.txt  DicomManager.cpp  DicomManager.h  README.md  main.cpp
ArquivosDesafio/: anonymized_mamo.dcm
